--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 				<div class="sidenav_inner">
 				  <div class="sidenav_nav">
 					 <ul id="sidenavList">
+							<li class="scrollBtn" id="topScroll"><a><span>Top</span></a></li>
 					 </ul>
 				  </div>
 				</div>
