--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<div id="nav-below">
 				<a href="/page/2/" >Next Page &raquo;</a>
 			</div>
-			<footer>
+			<footer id="bottomMarker">
 			</footer>
 		</div>
 	</main>
