--- a/secrets.html
+++ b/secrets.html
@@ -25,6 +25,7 @@
 				<div class="sidenav_inner">
 				  <div class="sidenav_nav">
 					 <ul id="sidenavList">
+							<li class="scrollBtn" id="topScroll"><a><span>Top</span></a></li>
 						 </ul>
 				  </div>
 				</div>
@@ -50,7 +51,7 @@
 			<div id="nav-below">
 				<a href="/page/2/" >Next Page &raquo;</a>
 			</div>
-			<footer>
+			<footer id="bottomMarker">
 			</footer>
 		</div>
 	</main>
