--- a/secrets.html
+++ b/secrets.html
@@ -42,6 +42,7 @@
 				<div class="bio">
 					Testing stuff so I don't have to break the main site.<br>
 					Test 1 can the youtube API get unlisted videos.<br>
+					Now ordered oldest to newest :(<br>
 					<a href="bonustest.html">Further tests</a><br>
 					<span id="total_views"></span>
 				</div>
