--- a/secrets.html
+++ b/secrets.html
@@ -63,6 +63,6 @@ var infinite_scroll="{\"loading\":{\"msgText\":\"<img alt=\\\"\\\" src=\\\"http:
 <script type='text/javascript' src='/js/jquery/jquery.infinitescroll.js?ver=2.6.1'></script>
 <script type="text/javascript">// Because the `wp_localize_script` method makes everything a string
 infinite_scroll=jQuery.parseJSON(infinite_scroll);jQuery(infinite_scroll.contentSelector).infinitescroll(infinite_scroll,function(newElements,data,url){eval(infinite_scroll.callback);});</script>
-<script type="text/javascript">window.onload=GetVidIdsUnlisted(()=>{GenerateHtml();GenerateIds();e=document.getElementsByClassName("vid_upload").length;;KeepOrder(e);GetChannelStats();MoveSubscribe();loadingB=false;});</script>
+<script type="text/javascript">window.onload=GetVidIdsUnlisted(()=>{GenerateHtml();GenerateIds();e=document.getElementsByClassName("vid_upload").length;console.log(e);KeepOrder(e);GetChannelStats();MoveSubscribe();loadingB=false;});</script>
 </body>
 </html>
