--- a/secrets.html
+++ b/secrets.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 	<main>
-		<button class="subscribe_button" id="subscribe_button">SUBSCRIBE</button>
+		<button class="subscribe_button" id="subscribe_button" onclick="ChannelSubscribe">SUBSCRIBE</button>
 		<script type='text/javascript'>!function(e){var o=e(".subscribe_button"),n=o.offset().top,t=screen.height/2-screen.height/9;e(window).on("scroll",function(i){var r=e(window).scrollTop();o.stop(!1,!1).animate({top:r<n?0:r-n+t},{duration:1e3,queue:!1})}),e(window).on("scroll",function(n){e({deg:0}).animate({deg:360},{duration:1e3,queue:!1,step:function(e){o.css({transform:"rotate("+e+"deg)"})}})})}(jQuery);</script>
 		<section class="sidenav">
 				<div class="sidenav_inner">
