--- a/index.html
+++ b/index.html
@@ -41,19 +41,13 @@
 				</a>
 				<div class="bio">
 					A super cool boi.<br>
-					<a href="secrets.html">shhhhhhhhhhHHHHHHHHHHHHHHHHHHHHHHHH</a>
-					<br>
+					<a href="secrets.html">shhhhhhhhhhHHHHHHHHHHHHHHHHHHHHHHHH</a><br>
 					<span id="total_views"></span>
 				</div>
 			</article>
-
-			<article id="timeline">
-				</article>
-
-			<div id="nav-below">
-			</div>
-			<footer id="bottomMarker">
-			</footer>
+			<article id="timeline"></article>
+			<div id="nav-below"></div>
+			<footer id="bottomMarker"></footer>
 		</div>
 	</main>
 
