--- a/secrets.html
+++ b/secrets.html
@@ -13,14 +13,13 @@
 	<script src="/js/secretsYoutube.js"></script>
 	<script src="/js/anim80o.js"></script>
 	<script src="/js/infinitescroll.js"></script>
-	<script src="https://apis.google.com/js/platform.js"></script>
 	<script type='text/javascript' src='/js/likes.min.js?ver=4.7.2'></script>
 	<link rel="stylesheet" href="/css/common.min.css" type="text/css" media="all">
 	<link rel="stylesheet" href="/css/profile_personal.min.css" type="text/css" media="all">
 </head>
 <body>
 	<main>
-		<button class="subscribe_button g-ytsubscribe" id="subscribe_button" data-channel="UCNGt4x8CYzKLCUGlfe-TQkg" data-layout="default" data-count="hidden">SUBSCRIBE</button>
+		<button class="subscribe_button" id="subscribe_button">SUBSCRIBE</button>
 		<script type='text/javascript'>!function(e){var o=e(".subscribe_button"),n=o.offset().top,t=screen.height/2-screen.height/9;e(window).on("scroll",function(i){var r=e(window).scrollTop();o.stop(!1,!1).animate({top:r<n?0:r-n+t},{duration:1e3,queue:!1})}),e(window).on("scroll",function(n){e({deg:0}).animate({deg:360},{duration:1e3,queue:!1,step:function(e){o.css({transform:"rotate("+e+"deg)"})}})})}(jQuery);</script>
 		<section class="sidenav">
 				<div class="sidenav_inner">
