--- a/testsite/index.html
+++ b/testsite/index.html
@@ -14,7 +14,6 @@
 	<script src="/js/youtube.js"></script>
 	<script src="/js/anim80o.js"></script>
 	<script src="/js/infinitescroll.js"></script>
-	<script type='text/javascript'>var likes = {"ajaxurl":"http:\/\/music.matthewwhitby.co.uk\/testsite\/php\/admin-ajax.php"};</script>
 	<script type='text/javascript' src='/js/likes.min.js?ver=4.7.2'></script>
 
 	<link rel="stylesheet" href="/css/common.min.css" type="text/css" media="all">
@@ -776,7 +775,7 @@
 
 <style>.alignnone{display: none;}</style>
 <script type='text/javascript'>
-var infinite_scroll="{\"loading\":{\"msgText\":\"<img alt=\\\"\\\" src=\\\"http:\\\/\\\/music.matthewwhitby.co.uk\\\/testsite\\\/css\\\/img\\\/loader.gif\\\" class=\\\"alignnone\\\" width=\\\"220\\\" height=\\\"19\\\" \\\/><img alt=\\\"\\\" src=\\\"http:\\\/\\\/music.matthewwhitby.co.uk\\\/testsite\\\/css\\\/img\\\/loader.gif\\\" class=\\\"alignnone\\\" width=\\\"220\\\" height=\\\"19\\\" \\\/><img alt=\\\"\\\" src=\\\"http:\\\/\\\/music.matthewwhitby.co.uk\\\/testsite\\\/css\\\/img\\\/loader.gif\\\" class=\\\"alignnone\\\" width=\\\"220\\\" height=\\\"19\\\" \\\/>\",\"finishedMsg\":\"<em>WIP<\\\/em>\",\"img\":\"http:\\\/\\\/music.matthewwhitby.co.uk\\\/testsite\\\/css\\\/img\\\/loader.gif\"},\"nextSelector\":\"#nav-below a:first\",\"navSelector\":\"#nav-below\",\"itemSelector\":\".card\",\"contentSelector\":\"#timeline\",\"debug\":false,\"behavior\":\"\",\"callback\":\"\"}";
+var infinite_scroll="{\"loading\":{\"msgText\":\"<img alt=\\\"\\\" src=\\\"https:\\\/\\\/music.whitbyfish.net\\\/testsite\\\/css\\\/img\\\/loader.gif\\\" class=\\\"alignnone\\\" width=\\\"220\\\" height=\\\"19\\\" \\\/><img alt=\\\"\\\" src=\\\"https:\\\/\\\/music.whitbyfish.net\\\/testsite\\\/css\\\/img\\\/loader.gif\\\" class=\\\"alignnone\\\" width=\\\"220\\\" height=\\\"19\\\" \\\/><img alt=\\\"\\\" src=\\\"https:\\\/\\\/music.whitbyfish.net\\\/testsite\\\/css\\\/img\\\/loader.gif\\\" class=\\\"alignnone\\\" width=\\\"220\\\" height=\\\"19\\\" \\\/>\",\"finishedMsg\":\"<em>WIP<\\\/em>\",\"img\":\"https:\\\/\\\/music.whitbyfish.net\\\/testsite\\\/css\\\/img\\\/loader.gif\"},\"nextSelector\":\"#nav-below a:first\",\"navSelector\":\"#nav-below\",\"itemSelector\":\".card\",\"contentSelector\":\"#timeline\",\"debug\":false,\"behavior\":\"\",\"callback\":\"\"}";
 </script>
 <script type='text/javascript' src='/testsite/js/jquery/jquery.infinitescroll.js?ver=2.6.1'></script>
 <script type="text/javascript">// Because the `wp_localize_script` method makes everything a string
