--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 	<link rel="shortcut icon" href="/css/img/whitby_icon.ico">
 	<script type="text/javascript">var vidIdList=[];var loadingB=true;var vidTotal=0;</script>
 	<script src="//code.jquery.com/jquery-1.12.4.min.js"></script>
-	<script src="/js/jquery/jquery.inview.min.js"></script>
-	<script src="/js/common.min.js"></script>
-	<script src="/js/timeline.js"></script>
-	<script src="/js/youtube.js"></script>
-	<script src="/js/anim80o.js"></script>
-	<script src="/js/infinitescroll.js"></script>
+	<script src="https://music.whitbyfish.net/js/jquery/jquery.inview.min.js"></script>
+	<script src="https://music.whitbyfish.net/js/common.min.js"></script>
+	<script src="https://music.whitbyfish.net/js/timeline.js"></script>
+	<script src="https://music.whitbyfish.net/js/youtube.js"></script>
+	<script src="https://music.whitbyfish.net/js/anim80o.js"></script>
+	<script src="https://music.whitbyfish.net/js/infinitescroll.js"></script>
 	<script type='text/javascript' src='/js/likes.min.js?ver=4.7.2'></script>
 	<link rel="stylesheet" href="/css/common.min.css" type="text/css" media="all">
 	<link rel="stylesheet" href="/css/profile_personal.min.css" type="text/css" media="all">
