--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script src="https://music.whitbyfish.net/js/jquery/jquery.inview.min.js"></script>
 	<script src="https://music.whitbyfish.net/js/common.min.js"></script>
 	<script src="https://music.whitbyfish.net/js/timeline.js"></script>
-	<script src="https://music.whitbyfish.net/js/youtube.min.js"></script>
+	<script src="https://music.whitbyfish.net/js/youtube.js"></script>
 	<script src="https://music.whitbyfish.net/js/anim80o.js"></script>
 	<script src="https://music.whitbyfish.net/js/infinitescroll.js"></script>
 	<script type='text/javascript' src='/js/likes.min.js?ver=4.7.2'></script>
